--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,25 @@
 .grid {
-    height: 360px;
-    width: 420px;
+    height: 370px;
+    width: 434px;
     display: flex;
     flex-wrap: wrap;
-    border: 2px solid red;
+    border: 2px solid blue;
 }
 
 .grid div {
     height: 60px;
     width: 60px;
-    background: red;
+    border: 1px solid black;
 }
 
 .player-one {
-    background-color: blue;
+    background-color: blueviolet;
     border-radius: 50%;
+    border: 1px solid black;
 }
 
 .player-two {
-    background-color: red;
+    background-color: royalblue;
     border-radius: 50%;
+    border: 1px solid black;
 }
